--- a/temas.css
+++ b/temas.css
@@ -7,6 +7,8 @@
     width: 100%;
     height: 150px;
     background-color: aquamarine;
+    text-align: center;
+    font-size: 35px;
 }
 .menu{
     width: 100%;
@@ -23,6 +25,9 @@
     width: 20%;
     height: 1000px;
     background-color: blue;
+    color: black;
+    text-align: center;
+    font-size: 30px;
 }
 .centro{
     width: 60%;
