--- a/temas.css
+++ b/temas.css
@@ -14,6 +14,7 @@
     width: 100%;
     height: 50px;
     background-color: chartreuse;
+    display: flex;
 }
 .contenedor2{
     width: 100%;
@@ -38,4 +39,23 @@
     width: 20%;
     height: 1000px;
     background-color: darkgoldenrod;
+}
+.sociales{
+height: 48px;
+width: 100px;
+background-color: brown;
+margin: 2px;
+}
+.matematicas{
+    height: 48px;
+    width: 100px;
+    background-color: brown;
+margin: 2px;
+}
+.biologia{
+
+    height: 48px;
+width: 100px;
+background-color: brown;
+margin: 2px;
 }
