--- a/temas.css
+++ b/temas.css
@@ -18,13 +18,13 @@
 }
 .contenedor2{
     width: 100%;
-    height: 1000px;
+    height: 2000px;
     background-color: cornflowerblue;
     display: flex;
 }
 .izquierda{
     width: 20%;
-    height: 1000px;
+    height: 2000px;
     background-color: blue;
     color: black;
     text-align: center;
@@ -32,12 +32,13 @@
 }
 .centro{
     width: 60%;
-    height: 1000px;
+    height: 2000px;
     background-color: darkcyan;
+    font-size: 20px;
 }
 .dercha{
     width: 20%;
-    height: 1000px;
+    height: 2000px;
     background-color: darkgoldenrod;
 }
 .sociales{
@@ -58,4 +59,11 @@ margin: 2px;
 width: 100px;
 background-color: brown;
 margin: 2px;
+}
+.tecnologia{
+    height: 48px;
+    width: 100px;
+    background-color: brown;
+    margin: 2px;
+
 }
